Bugfix: the filters dropdown in the admin was too wide

--- a/woost/admin/ui/resources/styles/woost-admin-ui-filtersdropdown--dropdownpanel.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-filtersdropdown--dropdownpanel.scss
@@ -5,6 +5,6 @@
     display: flex;
     overflow: hidden;
     flex-direction: column;
-    width: 20vw;
+    width: 20em;
 }
 
